# lbKMZIshamirCipherC

./: CMakeLists.txt  README.md  bash.install  main.c
headers/: calculations.h  crypt.h  prime.h
src/: calculations.c  crypt.c  prime.c
